# Time_series_project

./: pyproject.toml
notebooks/: experiment.py  notebook1.ipynb  notebook2.ipynb  notebook3.ipynb  notebook4.ipynb  notebook5.ipynb  notebook6.ipynb  notebook7.ipynb  notebook8.ipynb  test.py
src/: data.py  notebook1.ipynb  notebook2.ipynb
